@JFXooTable: generate tableview