@@ -2,8 +2,10 @@ package io.github.tanialx.jfxoo.processor;
 
 import com.squareup.javapoet.JavaFile;
 import io.github.tanialx.jfxoo.annotation.JFXooForm;
+import io.github.tanialx.jfxoo.annotation.JFXooTable;
 import io.github.tanialx.jfxoo.processor.gnrt.CreatorGnrt;
 import io.github.tanialx.jfxoo.processor.gnrt.FormGnrt;
+import io.github.tanialx.jfxoo.processor.gnrt.TableGnrt;
 
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.ProcessingEnvironment;
@@ -16,20 +18,21 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class JFXooProc extends AbstractProcessor {
 
-    private final List<TypeElement> tes = new ArrayList<>();
+    private List<TypeElement> forms = new ArrayList<>();
+    private List<TypeElement> table = new ArrayList<>();
     private CreatorGnrt creatorGnrt;
     private FormGnrt formGnrt;
-    private boolean CREATOR_WRITTEN = false;
+    private TableGnrt tableGnrt;
 
     @Override
     public synchronized void init(ProcessingEnvironment processingEnv) {
         super.init(processingEnv);
         creatorGnrt = new CreatorGnrt(processingEnv);
         formGnrt = new FormGnrt(processingEnv);
+        tableGnrt = new TableGnrt(processingEnv);
     }
 
     @Override
@@ -37,21 +40,30 @@ public class JFXooProc extends AbstractProcessor {
         /*
          * Generate code for JFXoo supported annotations
          * - JFXooForm
-         * and write to 'generated' output path
+         * - JFXooTable
          */
         if (!roundEnv.processingOver()) {
-            tes.addAll(roundEnv.getElementsAnnotatedWith(JFXooForm.class)
+            forms.addAll(roundEnv.getElementsAnnotatedWith(JFXooForm.class)
                     .stream()
                     .filter(e -> e.getKind() == ElementKind.CLASS)
-                    .map(e -> (TypeElement) e)
-                    .collect(Collectors.toList()));
+                    .map(e -> (TypeElement) e).toList());
+            table.addAll(roundEnv.getElementsAnnotatedWith(JFXooTable.class)
+                    .stream()
+                    .filter(e -> e.getKind() == ElementKind.CLASS)
+                    .map(e -> (TypeElement) e).toList());
         } else {
-            tes.forEach(te -> {
+            forms.forEach(te -> {
                 this.output(formGnrt.run(te));
-                creatorGnrt.add(te);
+                creatorGnrt.form(te);
             });
-            if (!CREATOR_WRITTEN && this.output(creatorGnrt.run())) {
-                CREATOR_WRITTEN = true;
+            forms.clear();
+            table.forEach(te -> {
+                this.output(tableGnrt.run(te));
+                creatorGnrt.table(te);
+            });
+            table.clear();
+            if (creatorGnrt.pending()) {
+                this.output(creatorGnrt.run());
             }
         }
         return false;
